# UNetDefence

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: README.md
docs/: ARCHITECTURE.md  PRODUCT.md
scripts/: check_ollama.sh  setup.sh  test_endpoints.sh
src/unetdefence/: __init__.py
src/unetdefence/api/: __init__.py  main.py
src/unetdefence/api/routes/: analytics.py  db.py  devices.py  events.py  health.py  llm.py
src/unetdefence/config/: __init__.py  settings.py
src/unetdefence/enrichment/: __init__.py  geoip.py  service.py
src/unetdefence/ingest/: __init__.py  worker.py
src/unetdefence/ingest/parsers/: __init__.py  fritz.py  suricata.py  zeek.py
src/unetdefence/llm/: __init__.py  analyst.py  embedding.py
src/unetdefence/models/: __init__.py  events.py  types.py
src/unetdefence/scheduler/: __init__.py  jobs.py  main.py
src/unetdefence/scripts/: __init__.py  ensure_ollama_models.py
src/unetdefence/storage/: __init__.py  connection.py  migrate.py  repositories.py
src/unetdefence/storage/migrations/: 001_initial.sql  001_initial_sqlite.sql  README.md
static/chat/: index.html
