[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unetdefence"
version = "0.1.0"
description = "Local network security analysis with IDS, enrichment, PostgreSQL, pgvector and configurable LLM"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "UNetDefence" }]
keywords = ["network", "security", "ids", "zeek", "suricata", "postgresql", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
]

dependencies = [
    "psycopg[binary,pool]>=3.1",
    "pgvector>=0.2.0",
    "aiosqlite>=0.19",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    "httpx>=0.25",
    "python-json-logger>=2.0",
    "apscheduler>=3.10",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "maxminddb>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "ruff>=0.1",
    "mypy>=1.0",
]

[project.scripts]
unetdefence-ingest = "unetdefence.ingest.worker:main"
unetdefence-api = "unetdefence.api.main:main"
unetdefence-scheduler = "unetdefence.scheduler.main:main"
unetdefence-ensure-ollama = "unetdefence.scripts.ensure_ollama_models:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
